@@ -42,6 +42,8 @@
 	<IMG SRC="/images/modify-class.gif" ALT="Modify Class" BORDER="0"></A>
 	<A HREF="{admin_uri}?op=delete-class&printer_name={printer_name}">
 	<IMG SRC="/images/delete-class.gif" ALT="Delete Class" BORDER="0"></A>
+	<A HREF="{admin_uri}?op=set-as-default&printer_name={printer_name}">
+	<IMG SRC="/images/set-as-default.gif" ALT="Set As Default" BORDER="0"></A>
 	</TD>
 </TR>
 }
