@@ -49,6 +49,8 @@
 	<IMG SRC="/images/config-printer.gif" ALT="Configure Printer" BORDER="0"></A>
 	<A HREF="{admin_uri}?op=delete-printer&printer_name={printer_name}">
 	<IMG SRC="/images/delete-printer.gif" ALT="Delete Printer" BORDER="0"></A>
+	<A HREF="{admin_uri}?op=set-as-default&printer_name={printer_name}">
+	<IMG SRC="/images/set-as-default.gif" ALT="Set As Default" BORDER="0"></A>
 	</TD>
 </TR>
 <TR>
